objects/Success_Experience_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Account_Value_Higher_Threshold__c</fullName>
        <description>Higher Threshold for Account Value in experience calculation.</description>
        <inlineHelpText>Higher Threshold for Account Value in experience calculation.</inlineHelpText>
        <label>Account Value Higher Threshold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Value_Lower_Threshold__c</fullName>
        <description>Lower Threshold for Account Value in experience calculation.</description>
        <inlineHelpText>Lower Threshold for Account Value in experience calculation.</inlineHelpText>
        <label>Account Value Lower Threshold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <description>Named Account is one of the Success Experience automation criteria.</description>
        <inlineHelpText>Select this criterion if needed as a condition of experience assignment.</inlineHelpText>
        <label>Named Account</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CT Enterprise</fullName>
                </value>
                <value>
                    <fullName>Enterprise(but with Event team)</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise-HQ</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise Subsidiary-HQ</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise Subsidiary</fullName>
                </value>
                <value>
                    <fullName>CC Enterprise-HQ</fullName>
                </value>
                <value>
                    <fullName>CC Enterprise</fullName>
                </value>
                <value>
                    <fullName>CC Enterprise Subsidiary-HQ</fullName>
                </value>
                <value>
                    <fullName>CC Enterprise Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Enterprise Partnership</fullName>
                </value>
                <value>
                    <fullName>Enterprise Holdback</fullName>
                </value>
                <value>
                    <fullName>Affinity Partnership</fullName>
                </value>
                <value>
                    <fullName>Biz-Dev</fullName>
                </value>
                <value>
                    <fullName>Biz-Dev(but With Event Team)</fullName>
                </value>
                <value>
                    <fullName>Biz-Dev Tradeshows</fullName>
                </value>
                <value>
                    <fullName>Chapter Sales (Event Core)</fullName>
                </value>
                <value>
                    <fullName>Cross Sell-Survey</fullName>
                </value>
                <value>
                    <fullName>CSN SAT</fullName>
                </value>
                <value>
                    <fullName>CSN SAT-HQ</fullName>
                </value>
                <value>
                    <fullName>CSN SAT-HQ (Sub Account)</fullName>
                </value>
                <value>
                    <fullName>Cvent Banker</fullName>
                </value>
                <value>
                    <fullName>Cvent Vendor</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>MMI</fullName>
                </value>
                <value>
                    <fullName>MMI (But with event team)</fullName>
                </value>
                <value>
                    <fullName>MMI-HQ</fullName>
                </value>
                <value>
                    <fullName>MMI Subsidiary</fullName>
                </value>
                <value>
                    <fullName>MMI Subsidiary-HQ</fullName>
                </value>
                <value>
                    <fullName>Out of Territory-CC(Chk follow up)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Products_Higher_Threshold__c</fullName>
        <description>The higher threshold value for the Number of Products Attribute.</description>
        <inlineHelpText>The higher threshold value for the Number of Products Attribute.</inlineHelpText>
        <label>Number of Products Higher Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_Lower_Threshold__c</fullName>
        <description>The lower threshold value for the Number of Products Attribute.</description>
        <inlineHelpText>The lower threshold value for the Number of Products Attribute.</inlineHelpText>
        <label>Number of Products Lower Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Adding Product as a dimension to define assignment criteria.</description>
        <inlineHelpText>Adding Product as a dimension to define assignment criteria.</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Success_Experience_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region criterion is applicable for.</description>
        <inlineHelpText>The region criterion is applicable for.</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South and Latin America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Reason__c</fullName>
        <description>Define the reason for this rule. This text can be used as the chatter notification on the records where rule is applied.</description>
        <inlineHelpText>Specify the brief description (reason) for this rule.</inlineHelpText>
        <label>Rule Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Success_Experience__c</fullName>
        <description>This is the resulting experience from the setup record.</description>
        <inlineHelpText>Select the target Success Experience.</inlineHelpText>
        <label>Target Success Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Success_Experience</valueSetName>
        </valueSet>
    </fields>
    <description>The object to store the setup details (configurations, attributes, approvers, etc.) for Success Experience and any related process like change request approvers, territory sheet assignment attributes, etc.</description>
    <label>Success Experience Setup</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Success Experience Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Experience Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Attributes_APAC_ME_Africa</fullName>
        <columns>NAME</columns>
        <columns>Target_Success_Experience__c</columns>
        <columns>Level__c</columns>
        <columns>Region__c</columns>
        <columns>Account_Value_Lower_Threshold__c</columns>
        <columns>Account_Value_Higher_Threshold__c</columns>
        <columns>Named_Account__c</columns>
        <columns>Products__c</columns>
        <columns>Number_of_Products_Lower_Threshold__c</columns>
        <columns>Number_of_Products_Higher_Threshold__c</columns>
        <columns>Rule_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Success_Experience_Setup__c.Success_Experience_Attributes</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>APAC</value>
        </filters>
        <label>Attributes-APAC/ME/Africa</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Attributes_North_South_America_Europe</fullName>
        <columns>NAME</columns>
        <columns>Target_Success_Experience__c</columns>
        <columns>Level__c</columns>
        <columns>Region__c</columns>
        <columns>Account_Value_Lower_Threshold__c</columns>
        <columns>Account_Value_Higher_Threshold__c</columns>
        <columns>Named_Account__c</columns>
        <columns>Products__c</columns>
        <columns>Number_of_Products_Lower_Threshold__c</columns>
        <columns>Number_of_Products_Higher_Threshold__c</columns>
        <columns>Rule_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Success_Experience_Setup__c.Success_Experience_Attributes</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>includes</operation>
            <value>North America</value>
        </filters>
        <label>Attributes-North/South America &amp; Europe</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Success_Experience_Attributes</fullName>
        <columns>NAME</columns>
        <columns>Target_Success_Experience__c</columns>
        <columns>Level__c</columns>
        <columns>Region__c</columns>
        <columns>Account_Value_Lower_Threshold__c</columns>
        <columns>Account_Value_Higher_Threshold__c</columns>
        <columns>Named_Account__c</columns>
        <columns>Products__c</columns>
        <columns>Number_of_Products_Lower_Threshold__c</columns>
        <columns>Number_of_Products_Higher_Threshold__c</columns>
        <columns>Rule_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Success_Experience_Setup__c.Success_Experience_Attributes</value>
        </filters>
        <label>Success Experience Attributes</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Success_Experience_Attributes</fullName>
        <active>true</active>
        <description>Select this to enter the Success Experience attribute for automation.</description>
        <label>Success Experience Attributes</label>
    </recordTypes>
</CustomObject>